[project]
name = "agents-under-the-hood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "jsonpatch==1.33",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "pip>=26.0.1",
    "python-dotenv>=1.2.1",
]
